--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,12 @@ jobs:
       - name: Build Clover Pack
         run: |
           chmod +x ./buildme
+          chmod +x ./Clover_Duet.tool
+          chmod +x ./Clover_Duet.command
           ./buildme "" ci
       - name: Prepare Release Packs
         run: |
+          (cp -rf ./Clover_Duet.command ./CloverPackage/CloverV2 || exit 1)
           (cd "CloverPackage/CloverV2/EFI/CLOVER/" && zip -q "CLOVERX64.efi.zip" "CLOVERX64.efi" || exit 1)
           (cd "CloverPackage/sym/CloverISO-${{ env.CUR_TAG }}" && 7z a Clover-${{ env.CUR_TAG }}-X64.iso.7z *.iso || exit 1)
           releaseItems=(CloverPackage/sym/CloverISO*/*.7z CloverPackage/sym/CloverV2*.zip CloverPackage/CloverV2/EFI/CLOVER/CLOVERX64.efi.zip CloverPackage/sym/Clover_r*.pkg)
