autofill SMBIOS in the case of manual change product
Signed-off-by: Slice <sergey.slice@gmail.com>

--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -990,6 +990,8 @@
             <false/>
             <key>ExternalDiskIcons</key>
             <false/>
+            <key>ForceAquantiaEthernet</key>
+            <false/>
             <key>ForceExitBootServices</key>
             <false/>
             <key>ForceOcWriteFlash</key>
