exclude Updater and PrefPane from compilation as obsolete
Signed-off-by: Slice <sergey.slice@gmail.com>

--- a/CloverPackage/Makefile
+++ b/CloverPackage/Makefile
@@ -22,8 +22,8 @@ slimpkg2:
 slimpkg3:
 	@${SRCROOT}/makepkg --nothemes --norc --nolegacy
 
-updatepo:
-	@${SRCROOT}/package/translate.sh --update-po
+#updatepo:
+#	@${SRCROOT}/package/translate.sh --update-po
 
 utils:
 	@make -C "${SRCROOT}"/utils all
@@ -32,6 +32,8 @@ install:
 	@make -C "${SRCROOT}"/utils install
 
 clean:
-	rm -rf sym obj dst CloverPrefpane/build CloverUpdater/build
+	rm -rf sym obj dst 
+#CloverPrefpane/build CloverUpdater/build
 
-.PHONY: clean image iso pkg installer updatepo utils
+.PHONY: clean image iso pkg installer  utils
+
