--- a/BaseTools/Conf/tools_def.template
+++ b/BaseTools/Conf/tools_def.template
@@ -2117,7 +2117,7 @@ DEFINE GCC131_AARCH64_DLINK2_FLAGS     = DEF(GCC49_AARCH64_DLINK2_FLAGS) -Wno-er
 DEFINE GCC131_ARM_ASLDLINK_FLAGS       = DEF(GCC49_ARM_ASLDLINK_FLAGS)
 DEFINE GCC131_AARCH64_ASLDLINK_FLAGS   = DEF(GCC49_AARCH64_ASLDLINK_FLAGS)
 
-DEFINE GCC151_X64_CC_FLAGS            = DEF(GCC49_X64_CC_FLAGS) -fno-unwind-tables -Wno-incompatible-ms-struct -Wno-misleading-indentation -mms-bitfields -fno-ms-extensions -ffreestanding -fno-exceptions
+DEFINE GCC151_X64_CC_FLAGS            = DEF(GCC49_X64_CC_FLAGS) -fno-unwind-tables -Wno-incompatible-ms-struct -Wno-misleading-indentation -mms-bitfields -fno-ms-extensions -ffreestanding -fno-exceptions -Wno-error=unused-but-set-variable -Wno-error=comment -Wno-error=deprecated-non-prototype
 DEFINE GCC151_IA32_X64_DLINK_COMMON   = -nostdlib -Wl,--no-warn-rwx-segments,--gc-sections,-n,-q,--gc-sections,-z,common-page-size=0x40,--defsym=PECOFF_HEADER_SIZE=0x240,--script=$(EDK_TOOLS_PATH)/Scripts/GccBase.lds
 DEFINE GCC151_IA32_X64_ASLDLINK_FLAGS = DEF(GCC151_IA32_X64_DLINK_COMMON),--entry,ReferenceAcpiTable,-u,ReferenceAcpiTable
 DEFINE GCC151_IA32_X64_DLINK_FLAGS    = DEF(GCC151_IA32_X64_DLINK_COMMON),--entry,$(IMAGE_ENTRY_POINT),-u,$(IMAGE_ENTRY_POINT),-Map,$(DEST_DIR_DEBUG)/$(BASE_NAME).map
@@ -2631,15 +2631,15 @@ RELEASE_GCC131_AARCH64_DLINK_XIPFLAGS = -z common-page-size=0x20
 *_GCC151_X64_ASLCC_FLAGS          = DEF(GCC_ASLCC_FLAGS) -m64
 *_GCC151_X64_ASLDLINK_FLAGS       = DEF(GCC48_IA32_X64_ASLDLINK_FLAGS),-m,elf_x86_64
 *_GCC151_X64_ASM_FLAGS            = DEF(GCC151_ASM_FLAGS) -m64
-*_GCC151_X64_DLINK_FLAGS          = DEF(GCC151_X64_DLINK_FLAGS) DEF(GCC151_X64_CC_FLAGS) ENV(GCC151_X64_EXTRA_CC_FLAGS)
+*_GCC151_X64_DLINK_FLAGS          = DEF(GCC151_X64_DLINK_FLAGS) DEF(GCC151_X64_CC_FLAGS) ENV(GCC151_X64_EXTRA_CC_FLAGS) -Wno-error=unused-but-set-variable -Wno-error=comment -Wno-error=deprecated-non-prototype
 *_GCC151_X64_RC_FLAGS             = DEF(GCC_X64_RC_FLAGS)
 *_GCC151_X64_OBJCOPY_FLAGS        =
 *_GCC151_X64_NASM_FLAGS           = -f elf64
 
-  DEBUG_GCC151_X64_CC_FLAGS       = DEF(GCC151_X64_CC_FLAGS) -g3 -O0
-RELEASE_GCC151_X64_CC_FLAGS       = DEF(GCC151_X64_CC_FLAGS) -Os -Werror
-  DEBUG_GCC151_X64_CXX_FLAGS      = DEF(GCC151_X64_CC_FLAGS) -g3 -O0
-RELEASE_GCC151_X64_CXX_FLAGS      = DEF(GCC151_X64_CC_FLAGS) -Os -Werror
+  DEBUG_GCC151_X64_CC_FLAGS       = DEF(GCC151_X64_CC_FLAGS) -g3 -O0 -Wno-error=unused-but-set-variable -Wno-error=comment -Wno-error=deprecated-non-prototype
+RELEASE_GCC151_X64_CC_FLAGS       = DEF(GCC151_X64_CC_FLAGS) -Os -Werror -Wno-error=unused-but-set-variable -Wno-error=comment -Wno-error=deprecated-non-prototype
+  DEBUG_GCC151_X64_CXX_FLAGS      = DEF(GCC151_X64_CC_FLAGS) -g3 -O0 -Wno-error=unused-but-set-variable -Wno-error=comment -Wno-error=deprecated-non-prototype
+RELEASE_GCC151_X64_CXX_FLAGS      = DEF(GCC151_X64_CC_FLAGS) -Os -Werror -Wno-error=unused-but-set-variable -Wno-error=comment -Wno-error=deprecated-non-prototype
 
 #
 #
