--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,10 @@ jobs:
 
       - name: Build Clover Pack
         run: |
-          mkdir -p ~/src/CloverBootloader/toolchain/tools/download
-          cd ~/src/CloverBootloader/toolchain/tools
-          git clone https://github.com/com-chris1111/download.git 
-          cd ~/src/CloverBootloader
+          mkdir -p /Users/runner/work/CloverBootloader/toolchain/tools/download
+          cd /Users/runner/work/CloverBootloader/toolchain/tools
+          git clone https://github.com/com-chris1111/download.git
+          cd /Users/runner/work/CloverBootloader
           chmod +x ./buildme
           ./buildme "" ci
       - name: Prepare Release Packs
