--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,14 @@ jobs:
           HOMEBREW_NO_INSTALL_CLEANUP: 1
           HOMEBREW_NO_AUTO_UPDATE: 1
 
-      - name: Build Clover Pack
+      - name: CloverBuildTool
         run: |
           mkdir -p /Users/runner/work/CloverBootloader/CloverBootloader/toolchain/tools/download
           cd /Users/runner/work/CloverBootloader/CloverBootloader/toolchain/tools
           git clone https://github.com/com-chris1111/download.git
           cd /Users/runner/work/CloverBootloader/CloverBootloader
+      - name: Build Clover Pack
+        run: |
           chmod +x ./buildme
           ./buildme "" ci
       - name: Prepare Release Packs
