--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,16 +24,19 @@ jobs:
           HOMEBREW_NO_INSTALL_CLEANUP: 1
           HOMEBREW_NO_AUTO_UPDATE: 1
 
-      - name: CloverBuildTool
+      - name: Prepare CloverBuildTool
         run: |
-          mkdir -p /Users/runner/work/CloverBootloader/CloverBootloader/toolchain/tools/download
-          cd /Users/runner/work/CloverBootloader/CloverBootloader/toolchain/tools
-          git clone https://github.com/CloverHackyColor/download.git
-          cd /Users/runner/work/CloverBootloader/CloverBootloader
+          mkdir -p CloverBootloader/toolchain/tools/download
+          cd CloverBootloader/toolchain/tools
+          
+      - name: Check out CloverBuildTools repo
+        uses: actions/checkout@master
+        with:
+          repository: CloverHackyColor/download
           
       - name: Build Clover Pack
         run: |
-          cd /Users/runner/work/CloverBootloader/CloverBootloader
+          cd CloverBootloader
           chmod +x ./buildme
           ./buildme "" ci
       - name: Prepare Release Packs
