Add proxy and curl setup to CI workflow
Configured HTTP and HTTPS proxy environment variables and added steps to install curl and run a test request in the GitHub Actions workflow for macOS. This helps ensure network requests go through the specified proxy during CI runs.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,18 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Set proxy
+        run: |
+          echo "HTTP_PROXY=http://10.10.10.10:3128" >> $GITHUB_ENV
+          echo "HTTPS_PROXY=http://10.10.10.10:3128" >> $GITHUB_ENV
+      - uses: actions/setup-php@v2
+      - name: Install curl
+        run: |
+          apt-get update
+          apt-get install -y curl
+      - name: Run test
+        run: |
+          curl -v https://www.google.com
 
       - name: Manage Version
         run: |
