--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           echo "HTTP_PROXY=http://10.10.10.10:3128" >> $GITHUB_ENV
           echo "HTTPS_PROXY=http://10.10.10.10:3128" >> $GITHUB_ENV
-      - uses: actions/setup-php@v2
+      - uses: actions/checkout@v4
       - name: Install curl
         run: |
           apt-get update
