Add Clover-GenConfig utility and integrate into build
Introduces the new Clover-GenConfig utility, including its shell script, Xcode project, and supporting files.

--- a/CloverPackage/utils/Makefile
+++ b/CloverPackage/utils/Makefile
@@ -3,6 +3,6 @@ include $(CURDIR)/Make.rules
 #fdisk440 out
 #clover-genconfig temporary out
 #espfinder out
-SUBDIRS = boot1-install partutil bdmesg nvram
+SUBDIRS = boot1-install partutil bdmesg nvram CloverGenConfig
 
 all: all-recursive
