--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Manage Version
         run: |
-          git fetch --prune --unshallow --tags
+          git fetch --prune --unshallow --tags --no-recurse-submodules
           echo "CUR_TAG=$(git tag -l | tail -1)" >> $GITHUB_ENV
           echo "GIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
