Cleanup: Remove build logs and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,9 @@ RELEASE_*/
 # Local debug files
 bin/
 DEBUG_REPORT.md
+
+# Build logs
+*.log
+CloverPackage/*.log
+build_failure.log
+buildme_run.log
