Docs: Update config-sample.plist with ClearTaskSwitchBit quirk

--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -1002,6 +1002,8 @@
             <false/>
             <key>AvoidRuntimeDefrag</key>
             <true/>
+            <key>ClearTaskSwitchBit</key>
+            <false/>
             <key>DevirtualiseMmio</key>
             <false/>
             <key>DisableIoMapper</key>
