Docs: Update config-sample.plist with DisableIoMapperMapping and ResizeGpuBars

--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -1008,6 +1008,8 @@
             <false/>
             <key>DisableIoMapper</key>
             <true/>
+            <key>DisableIoMapperMapping</key>
+            <false/>
             <key>DisableLinkeditJettison</key>
             <true/>
             <key>DisableSingleUser</key>
@@ -1074,6 +1076,8 @@
             <key>RebuildAppleMemoryMap</key>
             <false/>
             <key>ResizeAppleGpuBars</key>
+            <integer>-1</integer>
+            <key>ResizeGpuBars</key>
             <integer>-1</integer>
             <key>SetupVirtualMap</key>
             <true/>
